--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,1 +1,115 @@
+name: Build JUCE Plugin
+
+on:
+  pull_request:
+    branches:
+      - production
+
+jobs:
+    build-windows:
+      runs-on: windows-latest
+
+      steps:
+        - name: Checkout repository
+          uses: actions/checkout@v2
+          with:
+            submodules: recursive
+
+        - name: Setup Visual Studio
+          uses: microsoft/setup-msbuild@v1.1
+          with:
+            msbuild-architecture: 'x64'
+
+        - name: Install dependencies
+          run: |
+            choco install cmake
+
+        - name: Clear CMake build directories
+          run: |
+            if (Test-Path Build) {
+              Remove-Item Build -Recurse -Force
+            }
+
+        - name: Configure CMake
+          run: |
+            cmake -B Build -D CMAKE_BUILD_TYPE=Release -D CMAKE_GENERATOR_PLATFORM=x64
+
+        - name: Build
+          run: cmake --build Build --config Release --verbose
+
+        - name: Archive build artifacts
+          uses: actions/upload-artifact@v3
+          with:
+            name: build-Windows
+            path: Build/Release/
+
+  build-macos:
+    runs-on: macos-latest
+
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v2
+        with:
+          submodules: recursive
+
+      - name: Install dependencies
+        run: |
+          brew install cmake gtk+3
+
+      - name: Set Xcode version
+        run: sudo xcode-select -s /Applications/Xcode_15.1.app
+
+      - name: Clear CMake build directories
+        run: |
+          if [ -d Build ]; then
+            rm -rf Build
+          fi
+
+      - name: Configure CMake
+        run: cmake -B Build -D CMAKE_BUILD_TYPE=Release -DCMAKE_OSX_ARCHITECTURES="x86_64;arm64"
+
+      - name: Build
+        run: cmake --build Build --config Release
+
+      - name: Run Tests
+        run: GTEST_COLOR=1 ctest --test-dir build --output-on-failure -j12
+
+      - name: Archive build artifacts
+        uses: actions/upload-artifact@v3
+        with:
+          name: build-macos
+          path: Build/Release/
+
+  build-linux:
+    runs-on: ubuntu-latest
+
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v2
+        with:
+          submodules: recursive
+
+      - name: Install dependencies
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y build-essential cmake libgtk-3-dev libwebkit2gtk-4.0-dev
+          sudo apt-get install -y libasound2-dev
+
+      - name: Clear CMake build directories
+        run: |
+          if [ -d Build ]; then
+            rm -rf Build
+          fi
+
+      - name: Configure CMake
+        run: cmake -B Build -D CMAKE_BUILD_TYPE=Release
+
+      - name: Build
+        run: cmake --build Build --config Release
+
+      - name: Archive build artifacts
+        uses: actions/upload-artifact@v3
+        with:
+          name: build-linux
+          path: Build/Release/
 
